--- a/Recipes/Info.plist
+++ b/Recipes/Info.plist
@@ -41,5 +41,27 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb281920955616559</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>281920955616559</string>
+    <key>FacebookDisplayName</key>
+    <string>Recipes</string>
+    
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
 </dict>
 </plist>
